syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "com.gridfs.proto";


message ReplicateCmd { string block_id = 1; string target_dn = 2; }
message DeleteBlockCmd { string block_id = 1; }
message AdminOrderRequest { string node_id = 1; oneof order { ReplicateCmd replicate = 2; DeleteBlockCmd delete_block = 3; } }
message AdminOrderResponse { bool ok = 1; string message = 2; }


// Servicio que expone el DataNode para recibir Ã³rdenes del Master
service DataNodeAdmin { rpc AdminOrder(AdminOrderRequest) returns (AdminOrderResponse); }